Criado funções de mudanças de status, criação de proposta e consulta de propostas
